# Backup

./: .gitignore  CMakeLists.txt  README.md  backup.env.example  package.json
include/backup/: backup_manager.h
include/core/: database_config.h  env_loader.h  logger.h
include/utils/: string_utils.h
schema/: init_backup_metadata.sql  init_iks_schema.sql
scripts/: build-binary.sh
src/: main.cpp
src/backup/: backup_manager.cpp  backup_scheduler.cpp
src/core/: database_config.cpp  env_loader.cpp  logger.cpp
systemd/: backup-scheduler.service
ui/backend/: load-env.js  package-lock.json  package.json  server.js
ui/backend/routes/: backups.routes.js  connections.routes.js
ui/backend/services/: database.service.js  init-schema.js
ui/frontend/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
ui/frontend/src/: App.tsx  index.css
ui/frontend/src/components/backups/: BackupHistoryTreeView.tsx  BackupManager.tsx  BackupManagerListView.tsx
ui/frontend/src/components/shared/: ConnectionStringInput.tsx  Container.tsx  SkeletonLoader.tsx
ui/frontend/src/services/: api.ts
ui/frontend/src/theme/: theme.ts
ui/frontend/src/ui/controls/: AsciiButton.tsx
ui/frontend/src/utils/: errorHandler.ts
